fixed spacing, cards wont overlap when hovering

--- a/src/ShowCard/ShowCard.css
+++ b/src/ShowCard/ShowCard.css
@@ -27,7 +27,7 @@
     height: 200px;
     background-color: rgba(40, 40, 40, 0.5); 
     transform: translateY(-100%);
-    right:10px;
+    right:0px;
     /* right: 61%; use this if there are only 2 or 3 cards */
     /*right 10px; use this if there are more than 3 cards and delete 'right:61%' */ 
 }
@@ -48,12 +48,14 @@
     transform:scale(1.8);
 }
 
+.list-cards {
+    margin-left: 2px;
+}
+
 .list-cards:hover {
     transform:scale(1.05);
     box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
 }
-
-
 
 .recommend {
     color: white;
@@ -70,10 +72,5 @@
     transform: translateX(0px);
     transition: all .5s ease;
 
-}
-
-.forum-posts {
-    margin-left: 335px;
-    margin-top: 30px;
 }
 
